# appwashpy

./: .gitignore  LICENSE  README.md  example.ipynb  pyproject.toml
appwash/: __init__.py
appwash/client/: client.py  requests.py
appwash/common/: enums.py  helper.py  settings.py
appwash/core/: location.py  service.py
appwashpy/: __init__.py
appwashpy/client/: appwash.py  requests.py
appwashpy/common/: enums.py  errors.py  helper.py
appwashpy/core/: location.py  service.py
src/: __init__.py
src/client/: appwash.py  client.py  requests.py
src/common/: enums.py  errors.py
src/core/: location.py  service.py
tests/client/: test_appwash.py
